# FxGeniusBot

./: .replit  UI.html  agentic.py  api.py  chat.dart  chat_log.json  main (copy).py  main.py  message_history.json  pyproject.toml  replit.nix  s.txt
article_data/article_20241029_171640/: process_log.json
article_data/article_20241029_171640/versions/: v_20241029_171658.json  v_20241029_171658.txt  v_20241029_171659.json  v_20241029_171659.txt
conversation_history/21/: thread_20241103_174430.json  thread_20241103_174603.json  thread_20241103_175719.json  thread_20241103_180121.json
conversation_history/7/: thread_20241103_180314.json  thread_20241103_180439.json  thread_20241103_180553.json  thread_20241103_180818.json  thread_20241103_180931.json  thread_20241103_181036.json
conversation_history/hi my name is amir kalateh/: thread_20241103_173601.json
conversation_history/user_1/: thread_20241103_171703.json  thread_20241103_171819.json  thread_20241103_171908.json  thread_20241103_173753.json  thread_20241103_173956.json  thread_20241103_174112.json  thread_20241103_174252.json
templates/: Re  article_state.py  article_tools.py  interactive_article_writer.py  main (copy) 1.py  main (copy).py  s.py
user_memories/: 21_memories.json  7_memories.json  hi my name is amir kalateh_memories.json  user_1_memories.json
