[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
pytelegrambotapi = "^4.23.0"
langchain-core = "^0.3.10"
langchain-openai = "^0.2.2"
psycopg2-binary = "^2.9.9"
langchain-community = "^0.3.2"
langgraph = "^0.2.38"
pydantic = "^2.9.2"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
typing-extensions = "^4.12.2"
langchain = "^0.3.7"
sqlalchemy = "^2.0.36"
colorama = "^0.4.6"
pyfiglet = "^1.0.2"
langchain-mistralai = "^0.2.1"
httpx = "^0.27.2"
tenacity = "^9.0.0"
python-dotenv = "^1.0.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"